--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE HTML>
 <html lang="en" translate="no">
 
   <head>
@@ -110,7 +109,16 @@
 
               <!-- Mobile toggle -->
               <button class="navbar-toggle">
-              <svg class="menu-icon"fill="#000000" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"/></svg>
+                <svg
+                  class="menu-icon"
+                  fill="#000000"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="24px"
+                  height="24px"
+                ><path
+                    d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
+                  ></path></svg>
 
               </button>
               <!-- /Mobile toggle -->
@@ -149,18 +157,23 @@
               </p> }}
                 <div id="timer" class="countdown"></div>
               </div>
-              
-               <div class="hero__content__banner_slogan">
+
+              <div class="hero__content__banner_slogan">
                 <div>
-                  <h2 ><span>8-9</span>January 2022</h2>
+                  <h2><span>7-9</span>January 2022</h2>
                 </div>
               </div>
-            <form class="notify-me" action="/api/email" method="POST">
-              <div class="registration__details" style="margin-top: 30px;">
-                <input type="email" name="email" id="user-email" placeholder="Enter your email" >
-                <input type="submit" id="notify-btn" value="Notify Me">
-              </div>
-            </form>
+              <form class="notify-me" action="/api/email" method="POST">
+                <div class="registration__details" style="margin-top: 30px;">
+                  <input
+                    type="email"
+                    name="email"
+                    id="user-email"
+                    placeholder="Enter your email"
+                  />
+                  <input type="submit" id="notify-btn" value="Notify Me" />
+                </div>
+              </form>
             </div>
             <div class="hero__content__banner">
               <div class="chat">
@@ -181,7 +194,7 @@
                   <div class="message__content">What is the date of hackathon?</div>
                 </div>
                 <div class="message message--server">
-                  <div class="message__content">8-9 Jan 2022</div>
+                  <div class="message__content">7-9 Jan 2022</div>
                 </div>
                 <div class="message message--browser">
                   <div class="message__content">OK</div>
@@ -216,7 +229,6 @@
       </div>
       <!-- /Hero -->
 
-
       <div class="container tracks section">
         <br /><br />
         <div class="row">
@@ -239,19 +251,20 @@
               />
             </div>
             <div class="row text-center" style="margin: auto 20px;">
-              <p style="font-size: 17px;">DotSlash​ is a 30 hours long hackathon which is completely
-                  managed by students of SVNIT, Surat. It is a platform for
-                  developers around the world to use their innovative skills to
-                  produce something new and useful for the society.
+              <p style="font-size: 17px;">DotSlash​ is a 30 hours long hackathon
+                which is completely managed by students of SVNIT, Surat. It is a
+                platform for developers around the world to use their innovative
+                skills to produce something new and useful for the society.
               </p>
-              <p style="font-size: 17px;">Explore the realms of Web and Mobile based applications while
-                developing your ideas. You are free to use any framework and any
-                code fragment, until and unless it is open sourced.</p>
+              <p style="font-size: 17px;">Explore the realms of Web and Mobile
+                based applications while developing your ideas. You are free to
+                use any framework and any code fragment, until and unless it is
+                open sourced.</p>
               <p style="font-size: 17px;">
                 The limits are endless and the possiblities are infinite.
               </p>
-              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statement will be provided at
-                the time of The Event.</b>
+              <b style="color:  #bd0c0e; font-size: 17px;">Problem Statement
+                will be provided at the time of The Event.</b>
             </div>
             <br />
             <br />
@@ -269,7 +282,6 @@
         </div>
       </div>
 
-      
       <!-- Supported By -->
       <div id="about" class="section">
         <!-- container -->
@@ -278,52 +290,70 @@
           <div class="row">
             <!-- section title -->
             <div class="section-title">
-              <h3 class="title"><span style="color: white">Supported &nbsp;</span><span style="color: #bd0c0e;"
+              <h3 class="title"><span style="color: white">Supported &nbsp;</span><span
+                  style="color: #bd0c0e;"
                 > by</span></h3>
             </div>
             <!-- /section title -->
 
+            <div id="sponsorChallenges">
+              <div class="container">
+                <div class="row">
+                  <center>
+                    <div class="flip" style="max-width: 700px;">
+                      <div
+                        class="front content text-center"
+                        style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);"
+                      >
+                        <a href="https://www.svnit.ac.in/">
+                          <img
+                            src="./img/svnit.png"
+                            alt="logo"
+                            style="height:120px;width:120px;border-radius:50%; margin-bottom: 30px"
+                          />
+                        </a>
+                        <p>
+                          Sardar Vallabhbhai National Institute of Technology,
+                          Surat is a leading technical Institute not only at
+                          national level but also at International level for
+                          imparting training to students as per the needs of
+                          technology. It is also envisaged to provide the
+                          necessary infrastructure to take up research work and
+                          to provide the mechanism to interact with industries
+                          effectively.
+                        </p>
+                      </div>
+                    </div>
+                  </center>
 
-          <div id="sponsorChallenges" >
-            <div class="container">
-              <div class="row">
-                <center>
-                  <div class="flip" style="max-width: 700px;">
-                    <div class="front content text-center"
-                      style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
-                      <a href="https://www.svnit.ac.in/">
+                </div>
+                <div class="row">
+                  <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                    <div
+                      class="front content text-center"
+                      style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);"
+                    >
+                      <a href="http://ashine.in/">
                         <img
-                        src="./img/svnit.png"
-                        alt="logo"
-                        style="height:120px;width:120px;border-radius:50%; margin-bottom: 30px"
-                      />
+                          src="./img/ashine.png"
+                          alt="logo"
+                          style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
+                        />
                       </a>
                       <p>
-                        Sardar Vallabhbhai National Institute of Technology, Surat is a leading technical Institute not only at national level but also at International level for imparting training to students as per the needs of technology. It is also envisaged to provide the necessary infrastructure to take up research work and to provide the mechanism to interact with industries effectively.
+                        ASHINE is a Technology Business Incubator located at the
+                        centre of Sardar Vallabhbhai National Institute of
+                        Technology (SVNIT), Surat spread across 250 acres of
+                        lush-green campus having all the modern educational and
+                        recreational facilities for students. With an
+                        infrastructure that can support 30+ tech and non-tech
+                        startups and 200 startup enthusiasts from across the
+                        nation.
                       </p>
                     </div>
                   </div>
-                </center>
-                
-              </div>
-              <div class="row">
-                <div class="col-md-6 col-sm-6 col-xs-12 flip">
-                  <div class="front content text-center"
-                    style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
-                    <a href="http://ashine.in/">
-                      <img
-                        src="./img/ashine.png"
-                        alt="logo"
-                        style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
-                      />
-                    </a>
-                    <p>
-                      ASHINE is a Technology Business Incubator located at the centre of Sardar Vallabhbhai National Institute of Technology (SVNIT), Surat spread across 250 acres of lush-green campus having all the modern educational and recreational facilities for students. With an infrastructure that can support 30+ tech and non-tech startups and 200 startup enthusiasts from across the nation.
-                    </p>
-                  </div>
-                </div>
 
-                {{!-- <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                  {{! <div class="col-md-6 col-sm-6 col-xs-12 flip">
                   <div class="front content text-center"
                     style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
                     <a href="http://www.ssipgujarat.in/">
@@ -338,34 +368,41 @@
                       Government of Gujarat has developed a policy for providing assistance to Startups/ Innovation. Under this scheme, any individual/ group of individuals having innovative idea/ Concept will be eligible and/ or Universities/ education institutions, Incubation Centre/ PSUs/ R&D Institutions/ Private and other establishments will be eligible as an institution to support and mentor to innovators as approved by Committee. Startups in an economy's technology sectors is an important indicator of technological performance for several reasons.
                     </p>
                   </div>
-                </div> --}}
-                <div class="col-md-6 col-sm-6 col-xs-12 flip">
-                  <div class="front content text-center"
-                    style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);">
-                    <a href="https://nitsurat.acm.org/">
-                      <img
-                        src="./img/acm_logo.png"
-                        alt="logo"
-                        style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
-                      />
-                    </a>
-                    <p>
-                      ACM NIT Surat is a student chapter highly focused on planning and organizing events for coding, development, design etc. Founded in 2005, the chapter has been a centre for various learning, fun, and productive activities. Be it coding challenges, hackathons, quizzes, or application development, the activities of the chapter are widely acknowledged in the institute and keenly looked for. 
-                    </p>
+                </div> }}
+                  <div class="col-md-6 col-sm-6 col-xs-12 flip">
+                    <div
+                      class="front content text-center"
+                      style="background: radial-gradient(ellipse at bottom, #030119 0%, #00172c 100%);"
+                    >
+                      <a href="https://nitsurat.acm.org/">
+                        <img
+                          src="./img/acm_logo.png"
+                          alt="logo"
+                          style="height:120px;width:120px;border-radius:50%;  margin-bottom: 30px"
+                        />
+                      </a>
+                      <p>
+                        ACM NIT Surat is a student chapter highly focused on
+                        planning and organizing events for coding, development,
+                        design etc. Founded in 2005, the chapter has been a
+                        centre for various learning, fun, and productive
+                        activities. Be it coding challenges, hackathons,
+                        quizzes, or application development, the activities of
+                        the chapter are widely acknowledged in the institute and
+                        keenly looked for.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-    
+
           </div>
           <!-- row -->
         </div>
         <!-- /container -->
       </div>
       <!-- /Supported by -->
-
-
 
       <!-- Galery -->
       <div id="galery" style="margin-top: 80px;">
@@ -375,7 +412,8 @@
           <div class="row">
 
             <div class="section-title">
-              <h3 class="title"><span style="color: white;">Highlights </span></h3>
+              <h3 class="title"><span style="color: white;">Highlights
+                </span></h3>
             </div>
             <!-- galery owl -->
             <div id="galery-owl" class="owl-carousel owl-theme">
@@ -415,12 +453,11 @@
               </div>
               <!-- /galery item -->
 
-              
-            <!-- galery item -->
-            <div class="galery-item">
-              <img src="./img/galery/new_7.jpg" alt="">
-            </div>
-            <!-- /galery item --> 
+              <!-- galery item -->
+              <div class="galery-item">
+                <img src="./img/galery/new_7.jpg" alt="" />
+              </div>
+              <!-- /galery item -->
 
               <!-- galery item -->
               <div class="galery-item">
@@ -446,11 +483,11 @@
               </div>
               <!-- /galery item -->
 
-            <!-- galery item -->
-            <div class="galery-item">
-              <img src="./img/galery/new_12.jpg" alt="">
-            </div>
-            <!-- /galery item --> 
+              <!-- galery item -->
+              <div class="galery-item">
+                <img src="./img/galery/new_12.jpg" alt="" />
+              </div>
+              <!-- /galery item -->
 
               <!-- galery item -->
               <div class="galery-item">
@@ -466,7 +503,6 @@
         <!-- /container -->
       </div>
       <!-- /Galery -->
-
 
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
@@ -522,44 +558,49 @@
 
         <!-- become-sponsor -->
         <div id="become-sponsor" class="section">
-          <svg class="dotted-line" width="1920" height="859" viewBox="0 0 1920 859" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <svg
+            class="dotted-line"
+            width="1920"
+            height="859"
+            viewBox="0 0 1920 859"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
             <defs>
               <style type="text/css">
-                @keyframes dash 
-                {
-                    from 
-                    {
-                        stroke-dashoffset: 400;
-                    }
-                    to {
-                        stroke-dashoffset: 0;
-                    }
-                }
-                .path {
-                    stroke-dashoffset: 0;
-                    animation: dash 10s linear infinite;
-                }
-                #rocket
-                {
-                    transform: rotate(40deg);
-                } 
+                @keyframes dash { from { stroke-dashoffset: 400; } to {
+                stroke-dashoffset: 0; } } .path { stroke-dashoffset: 0;
+                animation: dash 10s linear infinite; } #rocket { transform:
+                rotate(40deg); }
               </style>
             </defs>
             <linearGradient id="grad1" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" stop-color="#ff416c" />
-                <stop offset="100%" stop-color="#ff4b2b" />
+              <stop offset="0%" stop-color="#ff416c"></stop>
+              <stop offset="100%" stop-color="#ff4b2b"></stop>
             </linearGradient>
 
-            <path id="MotionPath_2" class="path" d="M1958.5 2C1711.67 17.5 1151.4 123.9 885 425.5C730.5 600.414 490.2 924.1 -39 844.5" stroke="url(#grad1)" stroke-width="4" stroke-dasharray="10 10"/>
+            <path
+              id="MotionPath_2"
+              class="path"
+              d="M1958.5 2C1711.67 17.5 1151.4 123.9 885 425.5C730.5 600.414 490.2 924.1 -39 844.5"
+              stroke="url(#grad1)"
+              stroke-width="4"
+              stroke-dasharray="10 10"
+            ></path>
 
             <g id="spaceship">
-              <image  id="rocket" href="/img/2022/rocket.png" height="80" width="80"/>
-              <animateMotion dur="6s" repeatCount="indefinite" rotate="auto" >
-                  <mpath href="#MotionPath_2"/>
+              <image
+                id="rocket"
+                href="/img/2022/rocket.png"
+                height="80"
+                width="80"
+              />
+              <animateMotion dur="6s" repeatCount="indefinite" rotate="auto">
+                <mpath href="#MotionPath_2"></mpath>
               </animateMotion>
             </g>
           </svg>
-          
+
           <div class="section-title">
             <div class="container">
               <div class="row">
@@ -881,8 +922,8 @@
                     class="logo-img"
                     src="./img/2022/navbar_logo.png"
                     alt="logo"
-                  /> 
-                <span>Dot</span><span>Slash</span><span> 5.0</span>
+                  />
+                  <span>Dot</span><span>Slash</span><span> 5.0</span>
                 </a>
               </div>
             </div>
