fixes: font-size, color, style

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -57,7 +57,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="./css/herostyles.css" />
     <link rel="stylesheet" href="./css/background.css" />
-    <link rel="stylesheet" href="./css/highlights.css" />
+    <link rel="stylesheet" href="./css/timeline.css" />
 
     <link rel="stylesheet" href="./css/animated.min.css" />
   </head>
@@ -468,75 +468,82 @@
       </div>
       <!-- /Galery -->
 
-      <div class="container">
-      <h3 class="title" id="timeline-title"><span style="color: white">Hackathon &nbsp;</span><span
-                    style="color: #bd0c0e;"
-                  >/ Timelines</span> </h3>
-      <center><h1 class="mb-3">Day 1</h1></center>
-      <div class="timeline">
-        <div class="timeline-row">
-          <div class="timeline-time">12 : 00 AM</div>
-          <div class="timeline-content">
-            <h4>Problem Statements Released</h4>
-            <p>
-              Participating Teams will have to select any one of the problem
-              statements released and build their hack around it during the
-              hackathon.
-            </p>
-          </div>
-        </div>
 
-        <div class="timeline-row">
-          <div class="timeline-time">12 : 00 AM</div>
-          <div class="timeline-content">
-            <h4>Virtual Onboarding</h4>
-            <p>
-              The teams will be checked in before the main event commences.
-              Participants are requested to make sure that their team members
-              are present and all the prerequisites for the event are fulfilled.
-            </p>
-          </div>
-        </div>
+      <div id="schedule" class="section" style="margin-top: 80px; color:#a5b3cf;">
+        <!-- container -->
+        <div class="container">
+          <!-- row -->
+          <div class="row">
+            <!-- section title -->
+            <div class="section-title">
+              <h3 class="title"><span style="color: white">Schedule</span></h3>
+            </div>
+            <div class="timeline">
+              <div class="timeline-row">
+                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-content">
+                  <h4>Problem Statements Released</h4>
+                  <p >
+                    Participating Teams will have to select any one of the problem
+                    statements released and build their hack around it during the
+                    hackathon.
+                  </p>
+                </div>
+              </div>
 
-        <div class="timeline-row">
-          <div class="timeline-time">12 : 00 AM</div>
-          <div class="timeline-content">
-            <h4>Opening Ceremony</h4>
-            <p>
-              Inauguration ceremony of DOTSLASH 4.0 will start! Participants
-              will be briefed on rules and regulations, schedule and other
-              information regarding hackathon. Problem Statements willl be
-              thoroughly explained.
-            </p>
-          </div>
-        </div>
+              <div class="timeline-row">
+                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-content">
+                  <h4>Virtual Onboarding</h4>
+                  <p>
+                    The teams will be checked in before the main event commences.
+                    Participants are requested to make sure that their team members
+                    are present and all the prerequisites for the event are fulfilled.
+                  </p>
+                </div>
+              </div>
 
-        <div class="timeline-row">
-          <div class="timeline-time">12 : 00 AM</div>
-          <div class="timeline-content">
-            <h4>Hackathon Begins</h4>
-            <p>
-              Coding time starts! The participating teams can utilize their
-              private team rooms on discord server to discuss and develop their
-              hack based on their chosen problem statement
-            </p>
-          </div>
-        </div>
+              <div class="timeline-row">
+                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-content">
+                  <h4>Opening Ceremony</h4>
+                  <p>
+                    Inauguration ceremony of DOTSLASH 4.0 will start! Participants
+                    will be briefed on rules and regulations, schedule and other
+                    information regarding hackathon. Problem Statements willl be
+                    thoroughly explained.
+                  </p>
+                </div>
+              </div>
 
-        <div class="timeline-row">
-          <div class="timeline-time">12 : 00 AM</div>
-          <div class="timeline-content">
-            <h4>Final Problem Statement Selection</h4>
-            <p>
-              Teams will have to finalise the problem statements they wish to
-              work upon, after which any changes thus requested will stand
-              inadmissible.
-            </p>
+              <div class="timeline-row">
+                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-content">
+                  <h4>Hackathon Begins</h4>
+                  <p>
+                    Coding time starts! The participating teams can utilize their
+                    private team rooms on discord server to discuss and develop their
+                    hack based on their chosen problem statement
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-content">
+                  <h4>Final Problem Statement Selection</h4>
+                  <p>
+                    Teams will have to finalise the problem statements they wish to
+                    work upon, after which any changes thus requested will stand
+                    inadmissible.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-
+      
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
