--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -5,9 +5,22 @@
       font-size: 2.75em;
       text-align: center;
   }
-  center h1{
-      font-size: 2em;
+ 
+
+  .timeline h4{
+    font-weight: 500; 
+    color:#bcd0f7; 
+    font-size: 22px;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
   }
+
+  .timeline p{
+    font-size: 15px;
+    color:#bcd0f7; 
+    font-weight: 400; 
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  }
+
   .timeline {
     position: relative;
     background: #272e48;
@@ -19,6 +32,9 @@
     padding-right: 2rem;
     margin: 0 auto 1rem auto;
     overflow: hidden;
+    border: 3px solid #407bff;
+    border-radius: 25px;
+    box-shadow: 0 0 35px -15px #407bff, 0 0 16px -8px rgb(0 0 0 / 30%), 0 0 16px -6px rgb(0 0 0 / 3%);
   }
 
   .timeline-row {
@@ -65,6 +81,7 @@
     margin-right: 20px;
     color: #bcd0f7;
     font-size: 1.5rem;
+    margin-top: 5px;
   }
   .timeline-row .timeline-time small {
     display: block;
@@ -106,7 +123,7 @@
     /* border: 2px dashed #4b546f; */
   }
   .timeline-row .timeline-content h4 {
-    margin: 0 0 20px 0;
+    margin: 0 0 10px 0;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
