added timeline details

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -480,7 +480,17 @@
             </div>
             <div class="timeline">
               <div class="timeline-row">
-                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-time">1st Dec 11:59pm</div>
+                <div class="timeline-content">
+                  <h4>Registration Starts</h4>
+                  <p >
+                    Hackers can team up with maximum 3 members per team and register on our website. If you don't have a team, you can participate individually.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">24th Dec 11:59pm</div>
                 <div class="timeline-content">
                   <h4>Problem Statements Released</h4>
                   <p >
@@ -492,32 +502,47 @@
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-time">27th Dec - 6th Jan </div>
+                <div class="timeline-content">
+                  <h4>Workshop Series</h4>
+                  <p>
+                    Each evening we will be conducting a session by our Speakers around the tech-stacks, their products, or some other topics on startups, Mental Health, etc.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">6th Jan 11:59pm </div>
+                <div class="timeline-content">
+                  <h4>Idea Submission</h4>
+                  <p>
+                   Participating Teams will have to select any one of the problem statements released and submit an idea about how they are planning to go about their hack.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">7th Jan 8:00pm </div>
+                <div class="timeline-content">
+                  <h4>Top 50 Ideas Declared</h4>
+                  <p>
+                   The top 50 teams with original, interesting and feasible ideas will be selected and invited to build their hack during the hackathon.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">7th Jan 11:00pm</div>
                 <div class="timeline-content">
                   <h4>Virtual Onboarding</h4>
                   <p>
-                    The teams will be checked in before the main event commences.
-                    Participants are requested to make sure that their team members
-                    are present and all the prerequisites for the event are fulfilled.
+                   The teams will be checked in before the main event commences. Participants are requested to make sure that their team members are present and all the prerequisites for the event are fulfilled.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">12 : 00 AM</div>
-                <div class="timeline-content">
-                  <h4>Opening Ceremony</h4>
-                  <p>
-                    Inauguration ceremony of DOTSLASH 4.0 will start! Participants
-                    will be briefed on rules and regulations, schedule and other
-                    information regarding hackathon. Problem Statements willl be
-                    thoroughly explained.
-                  </p>
-                </div>
-              </div>
-
-              <div class="timeline-row">
-                <div class="timeline-time">12 : 00 AM</div>
+                <div class="timeline-time">7th Jan 11:59pm </div>
                 <div class="timeline-content">
                   <h4>Hackathon Begins</h4>
                   <p>
@@ -528,17 +553,6 @@
                 </div>
               </div>
 
-              <div class="timeline-row">
-                <div class="timeline-time">12 : 00 AM</div>
-                <div class="timeline-content">
-                  <h4>Final Problem Statement Selection</h4>
-                  <p>
-                    Teams will have to finalise the problem statements they wish to
-                    work upon, after which any changes thus requested will stand
-                    inadmissible.
-                  </p>
-                </div>
-              </div>
             </div>
           </div>
         </div>
