added schedule link

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -123,6 +123,7 @@
               <ul class="main-nav nav navbar-nav navbar-right">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#schedule">Schedule</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -240,7 +241,7 @@
               />
             </div>
             <div class="row text-center" style="margin: auto 20px;">
-              <p style="font-size: 17px;">DotSlash​ is a 30 hours long hackathon which is completely
+              <p style="font-size: 17px;">DotSlash​ is a 36 hours long hackathon which is completely
                   managed by students of SVNIT, Surat. It is a platform for
                   developers around the world to use their innovative skills to
                   produce something new and useful for the society.
