--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -210,7 +210,7 @@
     }
     .timeline .timeline-row:nth-child(odd) .timeline-time {
       position: relative;
-      top: 0;
+      top: -5px;
       left: 0;
       margin: 0 0 10px 30px;
     }
