--- a/views/home.hbs
+++ b/views/home.hbs
@@ -58,6 +58,7 @@
     <link rel="stylesheet" href="./css/herostyles.css" />
     <link rel="stylesheet" href="./css/background.css" />
     <link rel="stylesheet" href="./css/timeline.css" />
+    <link rel="stylesheet" href="./css/prizes.css" />
 
     <link rel="stylesheet" href="./css/animated.min.css" />
   </head>
@@ -558,7 +559,41 @@
           </div>
         </div>
       </div>
-      
+      <div id="prizes" class="section" style="margin-top: 50px;">
+        <div class="section-title">
+              <h3 class="title"><span style="color: white">Prizes and Swags</span></h3>
+            </div>
+        <div class="prizes-container">
+          <div class="prizes-navbar">
+          <h4 class="overall active">Overall</h4>
+          <h4 class="tracks">Track Prizes</h4>
+          <h4 class="swags">Swags</h4>
+        </div>
+          <div class="prizes-image">
+            <div class="prize-info">
+            <img src="./img/silver-medal.png" alt="">
+            <div class="details">
+              <h2>2nd Prize</h2>
+              <h3>Rs. 15,000 /-</h3>
+            </div>
+            </div>
+            <div class="prize-info">
+            <img src="./img/gold-medal.png" alt="">
+            <div class="details">
+              <h2>1st Prize</h2>
+              <h3>Rs. 20,000 /-</h3>
+            </div>
+            </div>
+            <div class="prize-info">
+            <img src="./img/bronze-medal.png" alt="">
+            <div class="details">
+              <h2>3rd Prize</h2>
+              <h3>Rs. 10,000 /-</h3>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="tracks container section">
         <div class="modal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
