--- a/views/home.hbs
+++ b/views/home.hbs
@@ -719,7 +719,10 @@
           </div>
         </div>
       </div>
-      <div class="tracks container section">
+      <div class="tracks">
+        
+      </div>
+      {{!-- <div class="container section">
         <div class="modal" tabindex="-1" role="dialog">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -747,7 +750,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> --}}
 
         <!-- Current-Sponsors -->
         <div id="sponsors" class="section">
@@ -859,7 +862,7 @@
                       style="color: #bd0c0e;"
                     >Questions</span></h3>
                 </div>
-                <img src="img/faq.svg" alt="faq" />
+                <img  style="max-height: 200px; width: 20rem;"src="img/faq.svg" alt="faq" />
               </div>
             </div>
 
@@ -1194,6 +1197,7 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/prizes.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery.countdown/2.2.0/jquery.countdown.min.js"
     ></script>
