--- a/views/home.hbs
+++ b/views/home.hbs
@@ -620,22 +620,22 @@
             <h4 class="tracks">Track Prizes</h4>
             <h4 class="swags">Swags for all</h4>
           </div>
-          <div class="overall-prizes">
-            <div class="prize-info">
+          <div class="overall-prizes show-flexbox">
+            <div class="prize-info silver">
               <img src="./img/silver-medal.png" alt="" />
               <div class="details">
                 <h2>2nd Prize</h2>
                 <h3>Rs. 15,000 /-</h3>
               </div>
             </div>
-            <div class="prize-info">
+            <div class="prize-info gold">
               <img src="./img/gold-medal.png" alt="" />
               <div class="details">
                 <h2>1st Prize</h2>
                 <h3>Rs. 20,000 /-</h3>
               </div>
             </div>
-            <div class="prize-info">
+            <div class="prize-info bronze">
               <img src="./img/bronze-medal.png" alt="" />
               <div class="details">
                 <h2>3rd Prize</h2>
@@ -643,7 +643,7 @@
               </div>
             </div>
           </div>
-          <div class="swags-for-all show-grid">
+          <div class="swags-for-all">
             <div class="flip-card-container">
               <div class="flip-card">
                 <div class="card-front"> 
