--- a/views/home.hbs
+++ b/views/home.hbs
@@ -124,6 +124,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#schedule">Schedule</a></li>
+                <li><a href="#prizes">Prizes</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
                 <li><a href="#contact">Contact</a></li>
